force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Loop__Agreement_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If left blank, the file name of the PDF will be used.</inlineHelpText>
    <label>Agreement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>