force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__CC__c.field-meta.xml
<CustomField>
    <fullName>Loop__CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email a Copy to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>