force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__CI_CC__c.field-meta.xml
<CustomField>
    <fullName>Loop__CI_CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will default the &apos;CC&apos; field when delivering the DocGen Package via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
    <label>CC</label>
    <type>TextArea</type>
</CustomField>