force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__DDP_File_Template__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP_File_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DDP File Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>