force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Delivery_Data__c.field-meta.xml
<CustomField>
    <fullName>Loop__Delivery_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>