force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Description_Hover__c.field-meta.xml
<CustomField>
    <fullName>Loop__Description_Hover__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text entered here will be displayed when users hover over this option&apos;s info icon.</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>