force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__dsEmailText__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsEmailText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use the Field Tagger to make this dynamic.</inlineHelpText>
    <label>Email Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>