force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__dsTemplateId__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsTemplateId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Template Id from the DocuSign Console. When using a Template Id, the roles of the recipients in the template must match the roles of the recipients in the related list below.</inlineHelpText>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>