force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Encrypted_Token__c.field-meta.xml
<CustomField>
    <fullName>Loop__Encrypted_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encrypted Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>