force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__FTPDomain__c.field-meta.xml
<CustomField>
    <fullName>Loop__FTPDomain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The FTP domain where you wish to store the document including any subfolders (e.g. ftp.yoursite.com/folder1/folder2/). The folders can be made dynamic using the Field Tagger.</inlineHelpText>
    <label>FTP Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>