force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__FTPUserName__c.field-meta.xml
<CustomField>
    <fullName>Loop__FTPUserName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The user name for your FTP domain.</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>