force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Message__c.field-meta.xml
<CustomField>
    <fullName>Loop__Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>