force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__OrgWideEmailId__c.field-meta.xml
<CustomField>
    <fullName>Loop__OrgWideEmailId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org-Wide Email Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>