force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__OrgWideEmailName__c.field-meta.xml
<CustomField>
    <fullName>Loop__OrgWideEmailName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgWideEmailName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>