force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Password__c.field-meta.xml
<CustomField>
    <fullName>Loop__Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use the Field Tagger to make this value dynamic.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>