force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__PostParameters__c.field-meta.xml
<CustomField>
    <fullName>Loop__PostParameters__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Format the parameters as if on a query string (paramName=smplVal&amp;p2=sV2). This can be made dynamic using tags from the Field Tagger.</inlineHelpText>
    <label>Post Parameters</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>