force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Preview_Step_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Loop__Preview_Step_Help_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text entered here will be displayed if there is a preview step.</inlineHelpText>
    <label>Preview Step Help Text</label>
    <type>TextArea</type>
</CustomField>