force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Queue_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Loop__Queue_Folder_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>