force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Loop__Redirect_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A URL used to redirect 3rd party processes.</inlineHelpText>
    <label>Redirect URL</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>