force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__SMTP_Username__c.field-meta.xml
<CustomField>
    <fullName>Loop__SMTP_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMTP Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>