force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__SMTPDomain__c.field-meta.xml
<CustomField>
    <fullName>Loop__SMTPDomain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>