force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__SMTPUserName__c.field-meta.xml
<CustomField>
    <fullName>Loop__SMTPUserName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Address</label>
    <type>Email</type>
</CustomField>