force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Storage_Folder__c.field-meta.xml
<CustomField>
    <fullName>Loop__Storage_Folder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type the folder structure for where you want to store the output. You can use the Field Tagger to dynamically determine your folders. Example: folder/sub folder/last folder</inlineHelpText>
    <label>Storage Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>