force-app/main/default/src/objects/Loop__DDP_Integration_Option__c/fields/Loop__Template__c.field-meta.xml
<CustomField>
    <fullName>Loop__Template__c</fullName>
    <description>Email template id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>